--- a/style.css
+++ b/style.css
@@ -162,3 +162,13 @@ img {
     font-size: 120px;
     line-height: 120px;
 }
+
+@media only screen and (max-width: 300px) {
+    .outside,
+    .inside {
+        height: 100%;
+        width: 30%;
+        position: center;
+        right: 50.1%;
+    }
+}
