--- a/style.css
+++ b/style.css
@@ -164,6 +164,9 @@ img {
 }
 
 @media only screen and (max-width: 300px) {
+    .card {
+        padding: 26px;
+    }
     .outside,
     .inside {
         height: 100%;
